# EventGeometry

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  EventGeometry.cc  EventGeometry.hh  EventGeometry.i  EventGeometry.py  MANIFEST.in  Makefile  NEWS.md  PyEventGeometry.cc  README.md  clean.sh  eventgeometry.i  eventgeometry.i.template  eventgeometry.py  setup.cfg  setup.py
.github/workflows/: build-wheels.yml
eventgeometry/: __init__.py  eventgeometry.cpp  eventgeometry.py
eventgeometry/swig/: eventgeometry.i
examples/: Makefile  emd_example  emd_example.cpp  pairwise_emds_example  pairwise_emds_example.cpp
scripts/: clean.sh  prepare-cibw-linux.sh  prepare-cibw-macos.sh
