[metadata]

name = EventGeometry
description = FastJet Contrib for computing the Energy Mover's Distance and related quantities
author = Patrick T. Komiske III
author_email = pkomiske@mit.edu
license = GPLv2
license_file = COPYING
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pkomiske/EventGeometry
keywords =
    distance
    earth mover's distance
    energy mover's distance
    emd
    fastjet
    fjcontrib
    hidden geometry
    metric
    optimal transport
    ot
    particle physics
    wasserstein

[options]

packages = find:
zip_safe = False
python_requires =
    >= 2.7
install_requires =
    numpy >= 1.16.0
    wurlitzer >= 2.0.1
setup_requires = 
    numpy >= 1.16.0
    pytest-runner
tests_require =
    numpy >= 1.16.0
    pytest >= 6.0.0

[aliases]

test = pytest