[metadata]

name = EventGeometry
description = FastJet Contrib for computing the Energy Mover's Distance and related geometric quantities
author = Patrick T. Komiske III
author_email = pkomiske@mit.edu
license = GPLv2
license_file = COPYING
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pkomiske/EventGeometry
keywords =
    distance
    earth mover's distance
    energy mover's distance
    emd
    fastjet
    fjcontrib
    hidden geometry
    metric
    optimal transport
    ot
    particle physics
    wasserstein

[options]

packages = find:
zip_safe = False

python_requires =
    >= 3.5

install_requires =
    numpy >= 1.12.0
    pyfjcore >= 0.4.0
    wurlitzer >= 2.0

[aliases]

test = pytest