[metadata]

name = EventGeometry
description = FastJet Contrib for computing the Energy Mover's Distance and related geometric quantities

author = Patrick T. Komiske III
author_email = pkomiske@mit.edu

license = GPLv2
license_file = COPYING

long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/pkomiske/EventGeometry

keywords =
    distance
    earth mover's distance
    energy mover's distance
    emd
    fastjet
    fjcontrib
    hidden geometry
    metric
    optimal transport
    ot
    particle physics
    wasserstein

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Modules

[options]

packages = find:
zip_safe = False

python_requires =
    >=3.6, <=3.9

install_requires =
    numpy >= 1.12.0
    pyfjcore >= 1.0.0
    wurlitzer >= 2.0.0
